--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="/docs.css" type="text/css" />
+    <!-- <meta name="robots" content="noindex">
+    <link rel="stylesheet" href="/docs.css" type="text/css" /> -->
   </head>
   <body>
     <div id="react-mount"></div>
