--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>George Gillams - redirect</title>
     <script type="text/javascript">
-        const oldLocation = window.location.split('github.io');
+        const oldLocation = (window.location + '').split('github.io');
         window.location = `http://www.georgegillams.co.uk${oldLocation[1]}`;
     </script>
   </head>
