--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>George Gillams - redirect</title>
     <script type="text/javascript">
-      window.location = "http://www.georgegillams.co.uk/";
+      window.location = "https://www.georgegillams.co.uk/";
     </script>
   </head>
   <body>
