--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <title>George Gillams - redirect</title>
     <script type="text/javascript">
         const oldLocation = (window.location + '').split('github.io');
-        window.location = `http://www.georgegillams.co.uk${oldLocation[1]}`;
+        window.location = `https://www.georgegillams.co.uk${oldLocation[1]}`;
     </script>
   </head>
   <body>
