[NO-JIRA] Update redirect link

--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1;url=https://www.georgegillams.co.uk/" />
+    <meta http-equiv="refresh" content="1;url=https://www.georgegillams.co.uk/?utm_source=GitHubPages" />
     <title>George Gillams - redirect</title>
     <script type="text/javascript">
         const oldLocation = (window.location + '').split('github.io');
-        window.location = `https://www.georgegillams.co.uk${oldLocation[1]}`;
+        window.location = `https://www.georgegillams.co.uk${oldLocation[1]}?utm_source=GitHubPages`;
     </script>
   </head>
   <body>
