--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="1;url=https://www.georgegillams.co.uk/" />
     <title>George Gillams - redirect</title>
     <script type="text/javascript">
-      window.location = "https://www.georgegillams.co.uk/";
+      window.location = "https://www.georgegillams.co.uk/?utm_source=GitHubPages";
     </script>
   </head>
   <body>
